# containerd-shim-spin

./: CHANGELOG.md  Cargo.toml  Makefile  README.md  SECURITY.md  release.md  rust-toolchain.toml
.devcontainer/: bootstrap.sh
.github/workflows/: action-build.yaml  action-check.yml  action-docker-build-push.yaml  action-node-installer.yaml  action-test.yml  ci.yaml  release.yaml
conformance-tests/: Cargo.toml
conformance-tests/src/: main.rs
containerd-shim-spin/: Cargo.toml  quickstart.md
containerd-shim-spin/src/: engine.rs  main.rs  source.rs  trigger.rs  utils.rs
deployments/: README.md
deployments/k3d/: README.md
deployments/k8s/: all-in-one-demo.yaml
deployments/kind/: DockerSetup.md  Dockerfile  README.md
deployments/kind/workload/: workload.yaml
deployments/workloads/: workload.yaml
images/spin/: Cargo.toml  Dockerfile
images/spin-dapr/: Cargo.toml  README.md
images/spin-keyvalue/: Cargo.toml  Dockerfile
images/spin-mqtt-message-logger/: Cargo.toml  Dockerfile
images/spin-multi-trigger-app/: Dockerfile
images/spin-multi-trigger-app/spin-http-trigger/: Cargo.toml
images/spin-multi-trigger-app/spin-redis-trigger/: Cargo.toml  Dockerfile
images/spin-outbound-redis/: Cargo.toml  Dockerfile
images/spin/go-hello/: go.mod  spin_go_hello.wasm
images/spin_dotnet/: spin.toml
node-installer/: Makefile  README.md  integration-test-k3s.sh  integration-test-kind.sh  integration-test-microk8s.sh  integration-test-minikube.sh  k3s-kwasm-job.yml
node-installer/script/: installer.sh
node-installer/tests/: Dockerfile.minikube-custom  integration-test-k3s.sh  integration-test-kind.sh  integration-test-microk8s.sh  integration-test-minikube.sh
node-installer/tests/workloads/: kwasm-job.yml  runtime.yaml  workload.yaml
scripts/: check-bins.sh  collect-debug-logs.sh  deploy-workloads.sh  down.sh  generate-shim-resource.sh  move-bins.sh  run-integration-tests.sh  setup-linux.sh  up.sh  version.sh
tests/: Cargo.toml
tests/src/: integration_test.rs
tests/workloads-pushed-using-docker-build-push/: README.md
tests/workloads-pushed-using-spin-registry-push/: README.md  workloads.yaml
