[package]
name = "containerd-shim-spin-v2"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
description = """
Containerd shim for running Spin workloads.
"""

[dependencies]
containerd-shim-wasm = { version = "1.0.0", default-features = false, features = ["opentelemetry"]}
log = "0.4"
spin-app = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-componentize = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
# Enable loading components precompiled by the shim
spin-trigger = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac", features = [
    "unsafe-aot-compilation",
] }
spin-trigger-http = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-trigger-redis = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
trigger-mqtt = { git = "https://github.com/spinframework/spin-trigger-mqtt", tag = "v0.8.0" } 
trigger-sqs = { git = "https://github.com/spinframework/spin-trigger-sqs", tag = "v0.13.0" } 
trigger-command = { git = "https://github.com/spinframework/spin-trigger-command", tag ="v0.6.0" } 
spin-loader = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-oci = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-telemetry = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-runtime-factors = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-core = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
spin-factor-outbound-networking = { git = "https://github.com/spinframework/spin", rev = "5f3aa19c50d1609592f7ea2f6362209a04da52ac" }
wasmtime = "43.0.1"
openssl = { version = "*", features = ["vendored"] }
anyhow = "1.0"
oci-spec = "0.7"
futures = "0.3"
ctrlc = { version = "3.5", features = ["termination"] }
url = "2.3"
serde_json = "1.0"
tokio = { version = "1", features = ["fs"] }

[dev-dependencies]
wat = "1"
temp-env = "0.3.6"
toml = "1.0"
tempfile = "3"
tokio = { version = "1", features = ["rt", "fs"] }